<resources>
    <string name="app_name">MoviePlayer</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="login_button">Entrar</string>
    <string name="textview">TextView</string>
    <string name="password">Senha</string>
    <string name="preference_file_key">com.mayarafernandes.movieplayer.CREDENTIALS</string>
    <string name="forget_email">Esquecer e-mail</string>
    <string name="movie_player">Movie Player</string>
    <string name="app_symbol">app_symbol</string>
    <string name="welcome_text">welcomeText</string>
    <string name="movieTitle">movieTitle</string>
    <string name="movieDescription">movieDescription</string>
    <string name="todo">TODO</string>
    <string name="no_connection">Erro ao carregar a lista</string>
    <string name="favorite_menu_name">Favoritos</string>
    <string name="movie_menu_name">Filmes</string>
    <string name="room_database_name">favorite-movies-database</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
