<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.view.LoginActivity">
    <TextView
            android:text="@string/e_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="18sp" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/emailEditText"/>
    <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:textAlignment="center"
            android:fontFamily="sans-serif-black" android:textSize="36sp"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="18sp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            app:layout_constraintStart_toStartOf="@+id/passwordEditText"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailEditText"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="@+id/textView2" app:layout_constraintEnd_toEndOf="@+id/textView2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="@+id/emailEditText" app:layout_constraintEnd_toEndOf="@+id/emailEditText"/>
    <Button
            android:text="@string/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
            android:onClick="onLogin"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginErrorMessageText" app:layout_constraintStart_toStartOf="@+id/passwordEditText"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            android:layout_marginStart="4dp" android:textColor="#B83028"/>
</androidx.constraintlayout.widget.ConstraintLayout>