<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/movieItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:foreground="?selectableItemBackground"
        app:cardUseCompatPadding="true">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/movieIconImageView"
                android:layout_width="100dp"
                android:layout_height="85dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

        <TextView
                android:id="@+id/movieTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autoSizeTextType="uniform"
                android:text="@string/movieTitle"
                android:textStyle="bold"
                android:maxLines="2"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.018"
                app:layout_constraintStart_toEndOf="@+id/movieIconImageView"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/movieDescriptionTextView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/movieDescription"
                android:autoSizeTextType="uniform"
                android:maxLines="3"
                android:ellipsize="end"
                app:layout_constraintBottom_toBottomOf="@+id/movieIconImageView"
                app:layout_constraintEnd_toEndOf="@+id/movieTitleTextView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/movieTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/movieTitleTextView"
                app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>